--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <form id ="tableForm">
+    <fieldset>
+      <legend>Store Submision Form</legend>
+      <label for="store">Store: </label>
+      <input name="store" type="text">
+      <label for="min">min Customer: </label>
+      <input name="min" type="text">
+      <label for="max">max Customer: </label>
+      <input name="max" type="text">
+      <label for="avg">average Customer: </label>
+      <input name="avg" type="text">
+      <button id="subButton">submit</button>
+      <table id="table1"></table>
+    </fieldset>
+  </form>
+
+
+
 
 
   <script type="text/javascript" src="app.js"></script>
