--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
     <fieldset>
       <legend>Store Submision Form</legend>
       <label for="store">Store: </label>
-      <input name="store" type="text">
+      <input id="store" name="store" type="text">
       <label for="min">min Customer: </label>
-      <input name="min" type="text">
+      <input id="min" name="min" type="text">
       <label for="max">max Customer: </label>
-      <input name="max" type="text">
+      <input id="max" name="max" type="text">
       <label for="avg">average Customer: </label>
-      <input name="avg" type="text">
-      <button id="subButton">submit</button>
-      <table id="table1"></table>
+      <input id="avg" name="avg" type="text">
+      <button id="subButton" type="submit">Submit</button>
     </fieldset>
   </form>
-
-
-
-
-
+  <button id="clearFields" type="submit">Clear</button>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
