--- a/sales.html
+++ b/sales.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>CookieSalesSheet</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="layout.css">
+  <link rel="stylesheet" type="text/css" href="salesstyles.css">
 </head>
 <body>
   <fieldset>
