making sure everything is up to date. Final commit in this branch and project. Merge to master

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <title>Snookies</title>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="layout.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/layout.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <div id="page">
     <header>
       <nav>
         <ul id="navList">
-          <li class="navLinks"><img id="logo" src="salmonpic.png"></li>
+          <li class="navLinks"><img id="logo" class="animate" src="images/salmonpic.png"></li>
           <li class="navLinks"><a class="button button-primary" href="#page">Home</a></li>
           <li class="navLinks"><a class="button button-primary" href="#about">About</a></li>
           <li class="navLinks"><a class="button button-primary" href="#locations">Locations</a></li>
@@ -26,7 +26,7 @@
         <h3 id="intro">Introducing <span>Snookies</span></br>for the whole family.</h3>
       </div>
       <article id="about">
-        <img class="imageAlignRight" src="cheesyfishies.jpg">
+        <img class="imageAlignRight" src="images/cheesyfishies.jpg">
         <h2 class ="textAlignLeft">Our Story</h2>
         <h4 class="textAlignLeft">A high protein healthy snack</br> derived from locally sourced,</br>free range, shade grown,</br>free trade organic salmon.</h4>
       </article>
@@ -45,20 +45,19 @@
         <p class="loclist">All locations open 10am - 6pm. Come get your Snookies!</p>
       </article>
       <article id="merchandise">
-        <img class="imageAlignRight" src="fishshirt.jpg">
+        <img class="imageAlignRight" src="images/fishshirt.jpg">
         <h2 class="textAlignLeft">Merchandise</h2>
         <p class="textAlignLeft">A 100% merino wool</br>For a life of adventure</br>Show your love of Snookies!</p>
         <a class="button button-primary" id="purchase" href="#">Purchase</a>
       </article>
       <article id="events">
         <h2 class="textAlignRight">Events</h2>
-        <img class="imageAlignRight" src="salmonpic.png">
+        <img class="imageAlignRight" src="images/salmonpic.png">
         <ul>
           <li class="eventList"><a class="link" href="http://salmonfestseattle.com/">Salmon Fest</li>
           <li class="eventList"><a class="link" href="http://www.salmondays.org/">Salmon Days</li>
           <li class="eventList"><a class="link" href="http://salmonfestseattle.com/">Salmon Fest</li>
           <li class="eventList"><a class="link" href="http://www.wildsalmoncenter.org/press/events_and_talks.php">Salmon Center Talks</li>
-
         </ul>
       </article>
       <footer>
@@ -69,5 +68,6 @@
       </footer>
     </div><!--"content"-->
   </div> <!--"page" -->
+  <script type="text/javascript" src="js/animation.js"></script>
 </body>
 </html>
