--- a/sales.html
+++ b/sales.html
@@ -23,6 +23,6 @@
     </form>
     <!-- <button id="clearFields" type="click">Clear</button> -->
   </fieldset>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
