--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <div id="page">
     <header>
+      <img id="logo" class="animate" src="images/salmonpic.png">
+      <h2 id="name">Snookie's Cookies</h2>
+      <p id="titleSlogan">Salmon cookies made with fish, salmon cookies are delish!</p>
       <nav>
         <ul id="navList">
-          <li class="navLinks"><img id="logo" class="animate" src="images/salmonpic.png"></li>
           <li class="navLinks"><a class="button button-primary" href="#page">Home</a></li>
           <li class="navLinks"><a class="button button-primary" href="#about">About</a></li>
           <li class="navLinks"><a class="button button-primary" href="#locations">Locations</a></li>
@@ -25,12 +27,12 @@
       <div class ="main">
         <h3 id="intro">Introducing <span>Snookies</span></br>for the whole family.</h3>
       </div>
-      <article id="about">
+      <section id="about">
         <img class="imageAlignRight" src="images/cheesyfishies.jpg">
         <h2 class ="textAlignLeft">Our Story</h2>
-        <h4 class="textAlignLeft">A high protein healthy snack</br> derived from locally sourced,</br>free range, shade grown,</br>free trade organic salmon.</h4>
-      </article>
-      <article id="locations">
+        <p class="textAlignLeft">Salmon cookies began as a search for a</br>healthy high protien snack food.</br>Salmon cookies are derived</br>from locally sourced,</br>free range, shade</br>grown, free</br>trade</br></br>organic</br></br>salmon.</p>
+      </section>
+      <section id="locations">
         <h2 class="textAlignRight">Locations</h2>
         <div id="slogan">
           <h4 class="textAlignRight" id="firstSlogan">Salmon cookies made with fish,</br>salmon cookies are delish!</h4>
@@ -43,14 +45,14 @@
           <li class="loclist">Alki</li>
         </ul>
         <p class="loclist">All locations open 10am - 6pm. Come get your Snookies!</p>
-      </article>
-      <article id="merchandise">
+      </section>
+      <section id="merchandise">
         <img class="imageAlignRight" src="images/fishshirt.jpg">
         <h2 class="textAlignLeft">Merchandise</h2>
         <p class="textAlignLeft">A 100% merino wool</br>For a life of adventure</br>Show your love of Snookies!</p>
         <a class="button button-primary" id="purchase" href="#">Purchase</a>
-      </article>
-      <article id="events">
+      </section>
+      <section id="events">
         <h2 class="textAlignRight">Events</h2>
         <img class="imageAlignRight" src="images/salmonpic.png">
         <ul>
@@ -59,7 +61,7 @@
           <li class="eventList"><a class="link" href="http://salmonfestseattle.com/">Salmon Fest</li>
           <li class="eventList"><a class="link" href="http://www.wildsalmoncenter.org/press/events_and_talks.php">Salmon Center Talks</li>
         </ul>
-      </article>
+      </section>
       <footer>
         <ul>
           <li class="navLinks"><a class="button" href="#page">Home</a></li>
